--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation Styles here
+.header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px dashed darkgrey;
+  align-items: center;
+  padding: 3vh 5vw 2vh 5vw;
+
+  .title {
+    display: inline-block;
+    width: 40%;
+  }
+
+  .top-nav {
+    display: flex;
+    justify-content: space-around;
+    width: 49%;
+
+    .nav-item {
+      text-decoration: none;
+      font-size: 1.6rem;
+      color: black;
+      font-family: "Roboto", sans-serif;
+    }
+  }
+}
