--- a/css/index.css
+++ b/css/index.css
@@ -171,9 +171,9 @@ img {
 .header {
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px dashed darkgrey;
+  border-bottom: 2px dashed #C0C0C0;
   align-items: center;
-  padding: 3vh 5vw 2vh 5vw;
+  padding: 3vh 10vw 2vh 10vw;
 }
 .header .title {
   display: inline-block;
@@ -182,12 +182,13 @@ img {
 .header .top-nav {
   display: flex;
   justify-content: space-around;
-  width: 49%;
+  width: 45%;
+  padding: 0 2vh 0 2vh;
 }
 .header .top-nav .nav-item {
   text-decoration: none;
   font-size: 1.6rem;
-  color: black;
+  color: #212529;
   font-family: "Roboto", sans-serif;
 }
 .footer {
@@ -200,6 +201,13 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .intro {
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 1vh;
+}
+.home .intro .intro-title {
+  margin-top: 2vh;
 }
 .home .content-section {
   margin: 30px 0;
