--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,9 +2,9 @@
 .header {
   display: flex;
   justify-content: space-between;
-  border-bottom: 2px dashed darkgrey;
+  border-bottom: 2px dashed @navigation-border;
   align-items: center;
-  padding: 3vh 5vw 2vh 5vw;
+  padding: 3vh 10vw 2vh 10vw;
 
   .title {
     display: inline-block;
@@ -14,12 +14,13 @@
   .top-nav {
     display: flex;
     justify-content: space-around;
-    width: 49%;
+    width: 45%;
+    padding: 0 2vh 0 2vh;
 
     .nav-item {
       text-decoration: none;
       font-size: 1.6rem;
-      color: black;
+      color: @font-color;
       font-family: "Roboto", sans-serif;
     }
   }
