--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,12 @@
 // Mixins in here
+.button(@textcolor, @bgcolor, @wide) {
+  color: @textcolor;
+  background-color: @bgcolor;
+  width: @wide;
+  font-size: 1.8rem;
+  text-align: center;
+  vertical-align: middle;
+  padding: 1.2vh;
+  border-radius: 15px;
+
+}
