--- a/css/index.css
+++ b/css/index.css
@@ -175,15 +175,36 @@ img {
   align-items: center;
   padding: 3vh 10vw 2vh 10vw;
 }
+@media (max-width: 500px) {
+  .header {
+    display: block;
+    padding: 3vh 10vw 1vh 10vw;
+  }
+}
 .header .title {
   display: inline-block;
   width: 40%;
+}
+@media (max-width: 500px) {
+  .header .title {
+    width: 100%;
+    text-align: center;
+    font-size: 2.9rem;
+    margin-bottom: 2vh;
+  }
 }
 .header .top-nav {
   display: flex;
   justify-content: space-around;
   width: 45%;
   padding: 0 2vh 0 2vh;
+}
+@media (max-width: 500px) {
+  .header .top-nav {
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 2vw 0 2vw;
+  }
 }
 .header .top-nav .nav-item {
   text-decoration: none;
@@ -202,6 +223,11 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .home {
+    padding: 0 5vw 0 5vw;
+  }
+}
 .home .intro {
   border-bottom: 2px dashed #C0C0C0;
   padding-bottom: 1vh;
@@ -215,20 +241,50 @@ img {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+  }
 }
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -242,6 +298,11 @@ img {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -251,9 +312,20 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+  }
 }
 .home .content-pick .destination .btn {
   color: #FFFFFF;
@@ -264,4 +336,16 @@ img {
   vertical-align: middle;
   padding: 1.2vh;
   border-radius: 15px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination .btn {
+    color: #FFFFFF;
+    background-color: #17A2B8;
+    width: 100%;
+    font-size: 1.8rem;
+    text-align: center;
+    vertical-align: middle;
+    padding: 1.2vh;
+    border-radius: 15px;
+  }
 }
