--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,9 +6,21 @@
   align-items: center;
   padding: 3vh 10vw 2vh 10vw;
 
+  @media @mobile {
+    display: block;
+    padding: 3vh 10vw 1vh 10vw;
+  }
+
   .title {
     display: inline-block;
     width: 40%;
+
+    @media @mobile {
+      width: 100%;
+      text-align: center;
+      font-size: 2.9rem;
+      margin-bottom: 2vh;
+    }
   }
 
   .top-nav {
@@ -16,6 +28,12 @@
     justify-content: space-around;
     width: 45%;
     padding: 0 2vh 0 2vh;
+
+    @media @mobile {
+      width: 100%;
+      justify-content: space-between;
+      padding: 0 2vw 0 2vw;
+    }
 
     .nav-item {
       text-decoration: none;
