added animation mixin

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -110,6 +110,10 @@
       .btn {
         .button(@main-bg, @button-bg, 83%);
 
+        &:hover {
+            .buttonHover();
+        }
+
         @media @mobile {
           .button(@main-bg, @button-bg, 100%);
         }
