--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,5 +8,8 @@
   vertical-align: middle;
   padding: 1.2vh;
   border-radius: 15px;
-
+}
+.buttonHover {
+    .rubberBand(3s, 0.1s);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
